package ClientUS.NLP;

public class Actor_of_story {
    String ActorOfStory;
    public Actor_of_story(String actorOfStory){
        this.ActorOfStory = actorOfStory;
    }
    public String getActorOfStory(){
        return ActorOfStory;
    }
    public void setActorOfStory(String x) {
        ActorOfStory = x;
    }

}
