package ClientUS;

import java.rmi.Remote;

public interface RemoteListener extends Remote {


}
