package NLP;

import java.io.File;
import java.util.List;

public class NLP {


    public List<String> NN_list;
    public List<String> VB_list;
    public List<String> C_list;

    public File f;
    public String Actor_of_story;


    public NLP(){



    }
}
