package NLP.Rule_EX;

import NLP.interface_rule.AC_RULE;

public class AC_EX implements AC_RULE {
    @Override
    public void AC1() {

    }

    @Override
    public void AC2() {

    }

    @Override
    public void AC3() {

    }
}
