package NLP.Rule_EX;


import NLP.interface_rule.A_RULE;

/**
 *
 */
public class A_EX implements A_RULE {
    @Override
    public void A1() {

    }

    @Override
    public void A2() {

    }

    @Override
    public void A3() {

    }

    @Override
    public void A4() {

    }

    @Override
    public void A5() {

    }

    @Override
    public void A6() {

    }

    @Override
    public void A7() {

    }
}
