package NLP.Rule_EX;

import NLP.interface_rule.H_RULE;

public class H_EX implements H_RULE {
    @Override
    public void H1() {

    }

    @Override
    public void H2() {

    }

    @Override
    public void H3() {

    }
}
