package NLP.interface_rule;

public interface AC_RULE {
    void AC1();
    void AC2();
    void AC3();

}
