package NLP.interface_rule;

public interface A_RULE {

    void A1();
    void A2();
    void A3();
    void A4();
    void A5();
    void A6();
    void A7();
}
