package NLP.interface_rule;

public interface H_RULE {

    void H1();
    void H2();
    void H3();
}
