package NLP.interface_rule;

public interface R_RULE {

    void R1();
    void R2();
    void R3();
    void R4();
}
